# thesis-sentinel

./: .gitignore  README.md  pyproject.toml  watchlist.example.json
deploy/: SOUL.md
hermes_plugin/thesis-sentinel/: __init__.py  plugin.yaml
scripts/: demo-reset.sh  run_digest.py  run_poll.py  watch.py
sentinel/: __init__.py  analysis.py  commands.py  config.py  drafting.py  edgar.py  llm.py  notify.py  poll.py  prompts.py  state.py
tests/: conftest.py  test_alert_failure.py  test_analysis.py  test_backstop.py  test_commands.py  test_harness.py  test_pending_command.py  test_plugin_and_notify.py
tests/fixtures/: submissions_nvda.json
