[project]
name = "thesis-sentinel"
version = "0.1.0"
description = "Deterministic EDGAR watcher with an LLM thesis-impact judge, on Maritime/Hermes/Inkbox"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sentinel"]
